feat(ingester): add API route to fetch Grafana URL
